--- a/style.css
+++ b/style.css
@@ -27,15 +27,8 @@
 }
 .foot{
     text-align: right;
+    background-color: coral;
 }
-
-
-
-
-
-
-
-
 .container>input[type=text], .container>input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -58,7 +51,7 @@
   button:hover {
     opacity: 0.8;
   }
-  .cancelbtn {
+  .container>.cancelbtn {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
