--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     width: 19%;
     padding: 5px;
 }
-.foot{
+.footer{
     text-align: center;
 }
 .container>input[type=text], .container>input[type=password] {
